--- a/src/css/header.css
+++ b/src/css/header.css
@@ -42,3 +42,75 @@
 .nav-link.active::after {
   background: #747bff;
 }
+
+/* #region header */
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.logo-image {
+  margin-right: 16px;
+}
+.logo-text {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 0.93333;
+  color: #173a56;
+  font-family: Poppins;
+  align-items: center;
+  display: flex;
+  margin-right: 237px;
+}
+.nav {
+  display: flex;
+  align-items: center;
+  padding: 22px 0;
+}
+.nav-ul {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.nav-li {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.625;
+  color: #22343d;
+  padding-top: 26px;
+  padding-bottom: 26px;
+}
+.nav-li-pr {
+  font-weight: 600;
+  font-size: 16px;
+}
+.nav-button {
+  align-content: auto 0;
+  display: flex;
+  align-items: center;
+  gap: 21px;
+  margin-left: 73px;
+}
+.button-nav-in {
+  padding: 9px 0;
+  font-weight: 600;
+  font-size: 16px;
+  border: 1px solid;
+  border-radius: 4px;
+  width: 105px;
+  height: 42px;
+  color: #173a56;
+  background-color: #ffffff;
+  text-align: center;
+}
+.button-nav-up {
+  padding: 9px 0;
+  font-weight: 600;
+  font-size: 16px;
+  border: 1px solid;
+  border-radius: 4px;
+  width: 105px;
+  height: 42px;
+  color: #ffffff;
+  background: #02897a;
+}
+/* #endregion header*/
