--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,8 +10,14 @@
 @import url('./container.css');
 @import url('./animations.css');
 
+@import url('./global.css');
+
 /* Sections style */
 @import url('./header.css');
+
+@import url('./hero.css');
+@import url('./specifically.css');
+
 @import url('./vite-promo.css');
 @import url('./badges.css');
 @import url('./back-link.css');
