add all section8

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,26 +1,24 @@
-<!-- #region hero -->
-<section class="hero">
-    <div class="container hero-wrap">
-        <div class="hero-main-text">
-            <h1 class="hero-title">Work at the speed of thought</h1>
-            <p class="hero-title-descr">
-                Tools, tutorials, design and innovation experts, all in one place!
-                The most intuitive way to imagine your next user experience.
+<!-- #region Section1 -->
+
+<section class="hidden">
+    <div class="container section1">
+        <div class="section1-box">
+            <h2 class="section1-h2">Work at the speed of thought</h2>
+            <p class="section1-p">
+                Tools, tutorials, design and innovation experts, all in one place! The most intuitive
+                way to imagine your next user experience.
             </p>
-            <ul class="hero-list-buttons">
-                <li class="hero-list-item">
-                    <button type="button" class="hero-list-btn started">
-                        Get started
-                    </button>
-                </li>
-                <li class="hero-list-item">
-                    <button type="button" class="hero-list-btn watch">
-                        Watch the Video
-                    </button>
-                </li>
-            </ul>
+            <div class="section1-buttons">
+                <button class="section1-button" type="button">Get started</button>
+                <a class="section1-link" href="">
+                    <svg class="icon-play" width="20" height="18">
+                        <use href="./images/iconsprite.svg#icon-play"></use>
+                    </svg>Watch the Video</a>
+            </div>
         </div>
-        <img src="./images/product/hero-img.png" alt="hero" width="610" />
+
+        <img src="./images/product/hero.png" alt="" />
     </div>
 </section>
-<!-- #endregion hero-->
+
+<!-- #endregion Section1 -->
