--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,35 +1,23 @@
-<!-- #region header -->
-<header class="header">
+<!-- #region header  -->
+
+<header>
     <div class="container header-container">
-        <nav class="navigation">
-            <a href="./index.html" class="header-logo"><img src="./images/product/logo.png" alt="logo" /> Product</a>
-            <ul class="list-navigation">
-                <li class="list-navigation-item">
-                    <a href="./index.html" class="list-navigation-link current">Product</a>
-                </li>
-                <li class="list-navigation-item">
-                    <a href="./pricing.html" class="list-navigation-link">Pricing</a>
-                </li>
-                <li class="list-navigation-item">
-                    <a href="./customer.html" class="list-navigation-link">Customers</a>
-                </li>
-                <li class="list-navigation-item">
-                    <a href="./resurses.html" class="list-navigation-link">Resources</a>
-                </li>
+        <nav class="nav">
+            <a class="logo-text" href="./index.html"><img class="logo-image" src="./images/product/logo.png"
+                    alt="logo" />Product</a>
+
+            <ul class="nav-ul">
+                <li class="nav-li nav-li-pr"><a href="./index.html">Product</a></li>
+                <li class="nav-li"><a href="./pricing.html">Pricing</a></li>
+                <li class="nav-li"><a href="./customers.html">Customers</a></li>
+                <li class="nav-li"><a href="./resources.html">Resources</a></li>
             </ul>
         </nav>
-        <ul class="header-list-buttons">
-            <li class="header-list-btn-item">
-                <button type="button" class="header-list-btn sign-in">
-                    Sign In
-                </button>
-            </li>
-            <li class="header-list-btn-item">
-                <button type="button" class="header-list-btn sign-up">
-                    Sign Up
-                </button>
-            </li>
+        <ul class="nav-button">
+            <li><button class="button-nav-in" type="button">Sign In</button></li>
+            <li><button class="button-nav-up" type="button">Sign Up</button></li>
         </ul>
     </div>
 </header>
+
 <!-- #endregion header -->
