--- a/src/partials/spacifically.html
+++ b/src/partials/spacifically.html
@@ -1,56 +1,40 @@
-<!-- #region Specifically -->
-<section class="specifically">
-    <div class="container">
-        <h2 class="specifically-title">
-            Product was Built Specifically for You
-        </h2>
-        <ul class="specifically-list">
-            <li class="specifically-list-item">
-                <div class="icon-box green">
-                    <svg class="icons-specifically" width="16" height="18">
-                        <use href="./images/symbols.svg#coursor"></use>
-                    </svg>
-                </div>
-                <h3 class="specifically-item-subtitle">First click tests</h3>
-                <p class="specifically-item-descr">
-                    While most people enjoy casino gambling,
-                </p>
+<!-- #region Section2 -->
+
+<section class="hidden">
+    <div class="container section2-container">
+        <h2 class="section2-h2">Product was Built Specifically for You</h2>
+        <ul class="section2-ul">
+            <li class="li-product">
+                <svg class="svg-product svg-cursor" width="11" height="18">
+                    <use href="./images/iconsprite.svg#icon-cursor"></use>
+                </svg>
+                <h3 class="section2-h3">First click tests</h3>
+                <p class="section2-p">While most people enjoy casino gambling,</p>
             </li>
-            <li class="specifically-list-item">
-                <div class="icon-box blue">
-                    <svg class="icons-specifically" width="18" height="18">
-                        <use href="./images/symbols.svg#wave"></use>
-                    </svg>
-                </div>
-                <h3 class="specifically-item-subtitle">Design surveys</h3>
-                <p class="specifically-item-descr">
-                    Sports betting, lottery and bingo playing for the fun
-                </p>
+            <li>
+                <svg class="svg-product svg-snake" width="24" height="24">
+                    <use href="./images/iconsprite.svg#icon-snake"></use>
+                </svg>
+                <h3 class="section2-h3">Design surveys</h3>
+                <p class="section2-p">Sports betting, lottery and bingo playing for the fun</p>
             </li>
-            <li class="specifically-list-item">
-                <div class="icon-box fiolet">
-                    <svg class="icons-specifically" width="16" height="18">
-                        <use href="./images/symbols.svg#heart"></use>
-                    </svg>
-                </div>
-                <h3 class="specifically-item-subtitle">Preference tests</h3>
-                <p class="specifically-item-descr">
-                    The Myspace page defines the individual.
-                </p>
+            <li>
+                <svg class="svg-product svg-heart" width="18" height="18">
+                    <use href="./images/iconsprite.svg#icon-heart"></use>
+                </svg>
+                <h3 class="section2-h3">Preference tests</h3>
+                <p class="section2-p">The Myspace page defines the individual.</p>
             </li>
-            <li class="specifically-list-item">
-                <div class="icon-box red">
-                    <svg class="icons-specifically" width="14" height="18">
-                        <use href="./images/symbols.svg#clock"></use>
-                    </svg>
-                </div>
-                <h3 class="specifically-item-subtitle">Five second tests</h3>
-                <p class="specifically-item-descr">
-                    Personal choices and the overall personality of the person.
-                </p>
+            <li>
+                <svg class="svg-product svg-sandclock" width="18" height="18">
+                    <use href="./images/iconsprite.svg#icon-sandclock"></use>
+                </svg>
+                <h3 class="section2-h3">Five second tests</h3>
+                <p class="section2-p">Personal choices and the overall personality of the person.</p>
             </li>
         </ul>
-        <button type="button" class="specifically-btn">SIGN UP NOW</button>
+        <button class="section2-button" type="button">SIGN UP NOW</button>
     </div>
 </section>
-<!-- #endregion Specifically -->
+
+<!-- #endregion Section2 -->
